Change container startup user conf

--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -54,5 +54,5 @@ EOF
 RUN chmod +x /post-create-script.sh
 
 # [Optional] Set the default user. Omit if you want to keep the default as root.
-# USER $USERNAME
+USER $USERNAME
 CMD ["/bin/bash"]
